--- a/OneDarkPro.ini
+++ b/OneDarkPro.ini
@@ -23,7 +23,7 @@
 [Styles]
 DefaultScheme=52
 [Common Base]
-Default Style=font:Consolas; size:+1; charset:204; fore:#FFFFE2; back:#282C34
+Default Style=font:Consolas; size:+3; charset:204; fore:#FFFFE2; back:#282C34
 Margins and Line Numbers=bold; size:-1; fore:#495162; back:#262C33
 Matching Braces (Indicator)=fore:#515A6B; back:#252526; alpha:40; alpha2:220; indic_roundbox
 Matching Braces Error (Indicator)=fore:#788498; back:#252526; alpha:140; alpha2:220; indic_roundbox
@@ -41,6 +41,7 @@ Hyperlink Hotspots=bold; italic; fore:#7BBFF2; back:#57AFEF; indic_plain
 Unicode-Point Hover=fore:#00FA00; alpha:60; alpha2:180; indic_compositionthick
 Multi Edit Indicator=fore:#FFA000; alpha:60; alpha2:180; indic_roundbox
 Inline-IME Color=fore:#00FF00; back:#252526
+FileNameExtensions=
 [2nd Common Base]
 2nd Default Style=font:Courier New; fore:#FFFFE2; back:#252526
 2nd Margins and Line Numbers=font:Courier New; bold; size:-1; fore:#A4FFFF; back:#444444
@@ -60,12 +61,19 @@ Inline-IME Color=fore:#00FF00; back:#252526
 2nd Unicode-Point Hover=fore:#0000FA; alpha:60; alpha2:180; indic_compositionthick
 2nd Multi Edit Indicator=fore:#00A5FF; indic_box
 2nd Inline-IME Color=fore:#00FF00; back:#252526
+FileNameExtensions=
 [Text Files]
 Default=fore:#E0E2E4; back:#282C34
 Margins and Line Numbers=font:Consolas; size:-1
+Extra Line Spacing (Size)=size:-1
+FileNameExtensions=txt; text; tmp; log; asc; doc; scp; wtx
 [ANSI Art]
 Default=font:Lucida Console; thin; size:11; smoothing:aliased
 Margins and Line Numbers=font:Lucida Console; size:-2
+Matching Braces=
+Matching Braces Error=
+Extra Line Spacing (Size)=size:-1
+FileNameExtensions=nfo; diz; \^Readme$
 [Apache Config Files]
 Default=fore:#E0E2E4; back:#282C34
 Comment=italic; fore:#7F848E
@@ -73,8 +81,11 @@ String=fore:#98C379
 Number=fore:#D19A66
 Directive=fore:#E06C75
 IP Address=fore:#D19A66
+FileNameExtensions=conf; cfg; cnf; htaccess; prefs; iface; prop; po; te; \^Kconfig$; \^Doxyfile$
 [Assembly Script]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#75715E
+Identifier=
 String=fore:#E6DB74
 Number=fore:#AE81FF
 Operator=fore:#F92672
@@ -84,8 +95,29 @@ Extended Instruction=fore:#0A246A
 Directive=fore:#0A246A
 Directive Operand=fore:#0A246A
 Register=fore:#75715E
+FileNameExtensions=asm; s; sx; inc; a51
 [AutoHotkey Script]
+Default=fore:#DEDEDE; back:#141414
+Comment=fore:#B7B7B7
+Escape=italic; fore:#F98488
+Syntax Operator=fore:#B02D15
+Expression Operator=fore:#FF4F00
+String=fore:#0DAE09
+Number=fore:#F28B0D
+Identifier=fore:#CF2F0F
+Variable Dereferencing=fore:#F761B5
+Label=fore:#80FF80
+Flow of Control=fore:#0077EE
+Command=bold; fore:#9B7309
+Function=fore:#F42BF4
+Directive=italic; fore:#FA949A
+Keys & Buttons=bold; fore:#AC00AC
+Built-In Variables=bold; fore:#E73619
+Special=italic; fore:#8888FF
+Variable Keyword=italic; fore:#CF00CF
+FileNameExtensions=ahk; ahkl; ia; scriptlet
 [AutoIt3 Script]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#008000
 Number=fore:#008080
 Function=fore:#0000FF
@@ -98,8 +130,11 @@ Variable=fore:#808000
 Send Key=fore:#FF0000
 Preprocessor=fore:#FF8000
 Special=fore:#FF8000
+FileNameExtensions=au3
 [AviSynth Script]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#008000
+Operator=
 String=fore:#7F007F
 Number=fore:#007F7F
 Keyword=bold; fore:#00007F
@@ -107,13 +142,17 @@ Filter=bold; fore:#00007F
 Plugin=bold; fore:#0080C0
 Function=fore:#007F7F
 Clip Property=fore:#00007F
+FileNameExtensions=avs; avsi
 [Awk Script]
+Default=fore:#DEDEDE; back:#141414
 Keyword=bold; fore:#0000A0
 Keyword 2nd=bold; italic; fore:#6666FF
+Identifier=
 Comment=fore:#808080
 String=fore:#008000
 Number=fore:#C04000
 Operator=fore:#B000B0
+FileNameExtensions=awk
 [Batch Files]
 Default=fore:#E0E2E4; back:#282C34
 Comment=italic; fore:#7F848E
@@ -122,6 +161,7 @@ Identifier=fore:#98C379
 Operator=fore:#ABB2BF
 Command=bold; fore:#C678DD
 Label=fore:#C80000; back:#F4F4F4; eolfilled
+FileNameExtensions=bat; cmd
 [C# Source Code]
 Default=fore:#E0E2E4; back:#282C34
 Identifier=fore:#FFFFFF
@@ -138,7 +178,9 @@ Comment Doc=fore:#808080
 Comment Doc Word=bold; fore:#808080
 Comment Doc Error=italic; fore:#800000
 Task Marker=bold; fore:#208080
+FileNameExtensions=cs; csx; vala
 [C/C++ Source Code]
+Default=fore:#DEDEDE; back:#141414
 Identifier=fore:#B5B5B9
 Comment=fore:#0D8206
 Keyword=fore:#3A6EA5
@@ -153,7 +195,9 @@ Comment Doc=fore:#808080
 Comment Doc Word=bold; fore:#808080
 Comment Doc Error=italic; fore:#800000
 Task Marker=bold; fore:#208080
+FileNameExtensions=c; cpp; cxx; cc; h; hpp; hxx; hh; mm; idl; midl; inl; odl; xpm; pch
 [Cmake Script]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#008000
 String=fore:#7F007F; back:#EEEEEE
 Function=fore:#00007F
@@ -165,7 +209,9 @@ If Def=fore:#00007F
 Macro Def=fore:#00007F
 Variable within String=fore:#CC3300; back:#EEEEEE
 Number=fore:#008080
+FileNameExtensions=cmake; ctest; \^cmakelists\.txt$
 [Coffeescript]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#646464
 String=fore:#008000
 Preprocessor=fore:#FF8000
@@ -173,6 +219,10 @@ Identifier=bold; fore:#0A246A
 Operator=fore:#B000B0
 Number=fore:#FF0000
 Regex=fore:#006633; back:#FFF1A8
+Global Class=
+Word=
+Verbatim=
+FileNameExtensions=coffee; cakefile
 [Configuration Files]
 Default=fore:#E0E2E4; back:#282C34
 Key=fore:#98C379
@@ -200,7 +250,11 @@ Media=fore:#C678DD
 Variable=fore:#E06C75
 Unknown Pseudo-Class=fore:#FF0000
 Unknown Property=fore:#FF0000
+FileNameExtensions=css; less; hss; sass; scss
 [CSV Prism]
+Default=fore:#DEDEDE; back:#141414
+Margins and Line Numbers=fore:#DEDEDE; back:#454545
+Extra Line Spacing (Size)=size:-1
 Column 0=fore:#9400D3
 Column 1=fore:#1C01AF
 Column 2=fore:#0162F3
@@ -211,7 +265,9 @@ Column 6=fore:#80D500
 Column 7=fore:#D3E401
 Column 8=fore:#FE9901
 Column 9=fore:#D90000
+FileNameExtensions=csv
 [D Source Code]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#008000
 Comment Doc=fore:#0040A0
 Number=fore:#FF0000
@@ -220,7 +276,10 @@ Keyword 2nd=bold; fore:#0A246A
 Typedef=italic; fore:#0A246A
 String=italic; fore:#3C6CDD
 Operator=fore:#B000B0
+Identifier=
+FileNameExtensions=d; dd; di
 [Dart Source Code]
+Default=fore:#DEDEDE; back:#141414
 Keyword=fore:#0000FF
 Keyword 2nd=fore:#0000FF
 Meta-Data=fore:#FF8000
@@ -239,7 +298,9 @@ Number=fore:#FF0000
 Variable=fore:#9E4D2A
 Operator=fore:#7C5AF3
 Operator2=fore:#B000B0
+FileNameExtensions=dart
 [Diff Files]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#75715E
 Command=bold; fore:#0A246A
 Source and Destination=bold; italic; fore:#4C4745
@@ -247,7 +308,9 @@ Position Setting=fore:#0000FF
 Line Addition=back:#13354A; eolfilled
 Line Removal=fore:#960050; back:#1E0010; eolfilled
 Line Change=fore:#89807D; back:#4C4745; eolfilled
+FileNameExtensions=diff; patch
 [Go Source Code]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#008000
 Number=fore:#FF0000
 Keyword=bold; fore:#0A246A
@@ -255,7 +318,10 @@ Keyword 2nd=bold; fore:#0A246A
 Typedef=italic; fore:#0A246A
 String=italic; fore:#3C6CDD
 Operator=fore:#B000B0
+Identifier=
+FileNameExtensions=go
 [Inno Setup Script]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#008000
 Keyword=fore:#0000FF
 Parameter=fore:#0000FF
@@ -264,7 +330,11 @@ Preprocessor=fore:#CC0000
 Inline Expansion=fore:#800080
 Pascal Comment=fore:#008000
 Pascal Keyword=fore:#0000FF
+String=
+FileNameExtensions=iss; isl; islu
 [Java Source Code]
+Default=fore:#DEDEDE; back:#141414
+Identifier=
 Comment=fore:#008000
 Keyword=fore:#F92672
 Keyword 2nd=bold; fore:#A46000
@@ -275,6 +345,7 @@ Comment Doc=fore:#808080
 Comment Doc Word=bold; fore:#808080
 Comment Doc Error=italic; fore:#800000
 Task Marker=bold; fore:#208080
+FileNameExtensions=java; jad; aidl; bsh
 [JavaScript]
 Default=fore:#E0E2E4; back:#282C34
 Identifier=fore:#E06C75
@@ -284,9 +355,11 @@ String=fore:#98C379
 Regex=fore:#61AFEF
 Number=fore:#D19A66
 Operator=fore:#ABB2BF
+Comment Doc=fore:#7F7F7F
 Comment Doc Word=bold; fore:#808080
 Comment Doc Error=italic; fore:#800000
 Task Marker=bold; fore:#208080
+FileNameExtensions=js; jse; jsm; as; mjs; qs
 [JSON]
 Default=fore:#E0E2E4; back:#282C34
 Comment=italic; fore:#7F848E
@@ -298,7 +371,9 @@ Operator=fore:#ABB2BF
 Property Name=fore:#E06C75
 ESC Sequence=fore:#0B982E
 Parsing Error=fore:#FFFF00; back:#A00000; eolfilled
+FileNameExtensions=json; har; ipynb; wxcp; jshintrc; eslintrc; babelrc; prettierrc; stylelintrc; jsonld; jsonc; arcconfig; arclint; jscop
 [Julia Script]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#608060
 Number=fore:#FF0000
 Keyword=bold; fore:#0000FF
@@ -314,7 +389,9 @@ Literal String=fore:#B000B0
 Command=bold; fore:#0000DD
 Annotation=fore:#FF8000
 Parsing Error=fore:#FFFF00; back:#A00000; eolfilled
+FileNameExtensions=jl
 [KiXtart Script]
+Default=fore:#DEDEDE; back:#141414
 Keyword=bold; fore:#265CFF
 Function=fore:#9B009B
 Macro=fore:#FFC000
@@ -323,7 +400,10 @@ String=italic; fore:#8F8F8F
 Operator=fore:#C80000
 Number=fore:#009797
 Variable=fore:#9E4D2A
+Identifier=
+FileNameExtensions=kix
 [Kotlin Source Code]
+Default=fore:#DEDEDE; back:#141414
 Keyword=fore:#0000FF
 Annotation=fore:#FF8000
 Class=fore:#0080FF
@@ -342,7 +422,9 @@ Label=fore:#7C5AF3
 Number=fore:#FF0000
 Variable=fore:#9E4D2A
 Operator=fore:#B000B0
+FileNameExtensions=kt; kts; ktm
 [LaTeX Files]
+Default=fore:#DEDEDE; back:#141414
 Command=fore:#0000FF
 Comment=fore:#008000
 Math=fore:#FF0000
@@ -350,7 +432,9 @@ Special Char=fore:#AAAA00
 Tag=fore:#0000FF
 Verbatim Segment=fore:#666666
 Error=fore:#FFFF00; back:#A00000
+FileNameExtensions=tex; latex; sty; texi; texinfo; txi
 [Lua Script]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#008000
 Number=fore:#008080
 Keyword=fore:#00007F
@@ -360,13 +444,23 @@ Input, Output & System Facilities=fore:#00007F
 String=fore:#B000B0
 Literal String=fore:#B000B0
 Preprocessor=fore:#FF8000
+Operator=
+Identifier=
 Label=fore:#808000
+FileNameExtensions=lua; wlua; nse; luadoc; luax
 [Makefiles]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#75715E
 Identifier=fore:#003CE6
+Operator=
+Target=fore:#003CE6; back:#FFC000
 Preprocessor=fore:#75715E
+FileNameExtensions=mak; make; mk; dsp; msc; msvc; am; pro; pri; gmk; ninja; dsw; \^Makefile$; \^Kbuild$
 [Markdown]
 Default=fore:#E0E2E4; back:#282C34
+Line Begin=
+Strong=bold
+Emphasis=italic
 Header 1=fore:#E06C75
 Header 2=fore:#E06C75
 Header 3=fore:#E06C75
@@ -377,16 +471,26 @@ Pre Char=fore:#E0E2E4
 Unordered List=fore:#61AFEF
 Ordered List=fore:#61AFEF
 Block Quote=fore:#1B2765
+Strikeout=
+Horizontal Rule=bold
 Link=fore:#61AFEF
 Code=fore:#00007F; back:#EBEBEB
+FileNameExtensions=md; markdown; mdown; mkdn; mkd
 [MATLAB]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#008000
+Command=bold
 Number=fore:#FF8000
 Keyword=bold; fore:#00007F
 String=fore:#7F007F
+Operator=
+Identifier=
+FileNameExtensions=matlab; m; sce; sci
 [Nim Source Code]
+Default=fore:#DEDEDE; back:#141414
 Comment=italic; fore:#484A86
 Keyword=bold; fore:#5E8F60
+Identifier=
 String Double Quoted=fore:#A4255B
 String Single Quoted=fore:#A4255B
 String Triple Double Quotes=fore:#A4255B
@@ -395,7 +499,9 @@ Number=fore:#252DBE
 Operator=bold; fore:#4B4B4B
 Function name=fore:#4B4B4B
 Parsing Error=italic; fore:#FFFF00; back:#A00000
+FileNameExtensions=nim; nimrod
 [NSIS Script]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#008000
 String=fore:#666666; back:#EEEEEE
 Function=fore:#0033CC
@@ -410,19 +516,27 @@ Function Definition=fore:#0033CC
 PageEx=fore:#0033CC
 If Definition=fore:#0033CC
 Macro Definition=fore:#0033CC
+FileNameExtensions=nsi; nsh
 [Pascal Source Code]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#75715E
 Keyword=fore:#F92672
+Identifier=
 String=fore:#E6DB74
 Number=fore:#AE81FF
+Operator=bold
 Inline Asm=fore:#0000FF
 Preprocessor=fore:#75715E
+FileNameExtensions=pas; dpr; dpk; dfm; pp; lfm; lpr; fpd
 [Perl Script]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#75715E
 Keyword=fore:#F92672
+Identifier=
 String Double Quoted=fore:#E6DB74
 String Single Quoted=fore:#E6DB74
 Number=fore:#AE81FF
+Operator=bold
 Scalar $var=fore:#0A246A
 Array @var=fore:#003CE6
 Hash %var=fore:#B000B0
@@ -446,17 +560,24 @@ POD (Common)=fore:#A46000; back:#FFFFC0; eolfilled
 POD (Verbatim)=fore:#A46000; back:#FFFFC0; eolfilled
 Data Section=fore:#A46000; back:#FFFFC0; eolfilled
 Parsing Error=fore:#F8F8F0; back:#F92672
+FileNameExtensions=pl; pm; cgi; pod; plx; stp
 [PowerShell Script]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#75715E
 Keyword=fore:#F92672
+Identifier=
 String=fore:#E6DB74
 Number=fore:#AE81FF
+Operator=bold
 Variable=fore:#0A246A
 Cmdlet=fore:#804000; back:#FFF1A8
 Alias=bold; fore:#0A246A
+FileNameExtensions=ps1; psd1; psm1; psc1
 [Python Script]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#75715E
 Keyword=fore:#F92672
+Identifier=
 String Single Quoted=fore:#E6DB74
 String Double Quoted=fore:#E6DB74
 String Triple Single Quotes=fore:#E6DB74
@@ -466,17 +587,24 @@ Number=fore:#AE81FF
 Operator=fore:#F92672
 Function Name=fore:#A6E22E
 Class Name=fore:#A6E22E
+FileNameExtensions=py; pyw; pyx; pxd; pxi; boo; empy; cobra; gs
 [Registry Files]
-Comment=fore:#008800
-String=fore:#008000
-Value Type=bold; fore:#00007F
-Hex=fore:#7F0B0C
-Added Key=bold; fore:#000000; back:#FF8040; eolfilled
-Deleted Key=fore:#FF0000
-Escaped=bold; fore:#7D8187
+Default=fore:#E0E2E4; back:#282C34
+Comment=italic; fore:#7F848E
+Value Name=
+String=fore:#98C379
+Value Type=fore:#D19A66
+Hex=fore:#D19A66
+Added Key=fore:#61AFEF
+Deleted Key=fore:#61AFEF
+Escaped=
 GUID in Key Path=fore:#7B5F15
-Parameter=fore:#0B6561
+Parameter=fore:#98C379
+Operator=fore:#56B6C2
+FileNameExtensions=reg
 [Resource Script]
+Default=fore:#DEDEDE; back:#141414
+Identifier=
 Comment=fore:#75715E
 Keyword=fore:#F92672
 String=fore:#E6DB74
@@ -487,7 +615,9 @@ Comment Doc=fore:#808080
 Comment Doc Word=bold; fore:#808080
 Comment Doc Error=italic; fore:#800000
 Task Marker=bold; fore:#208080
+FileNameExtensions=rc; rc2; rct; rh; dlg; lang
 [R-S-SPlus Statistics Code]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#008000
 Keyword=bold; fore:#0A246A
 Base Package Functions=bold; fore:#7F0000
@@ -495,12 +625,17 @@ Other Package Functions=bold; fore:#7F007F
 Number=fore:#0000FF
 String=italic; fore:#3C6CDD
 Operator=bold; fore:#B000B0
+Identifier=
 Infix=fore:#660066
 Infix EOL=fore:#FF4000; back:#E0C0E0; eolfilled
+FileNameExtensions=r; rdata; rds; rda
 [Ruby Script]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#008000
 Keyword=fore:#00007F
+Identifier=
 Number=fore:#008080
+Operator=
 String=fore:#FF8000
 Class Name=fore:#0000FF
 Function Name=fore:#007F7F
@@ -511,7 +646,10 @@ Module Name=fore:#A000A0
 Instance Var=fore:#B00080
 Class Var=fore:#8000B0
 Data Section=fore:#600000; back:#FFF0D8; eolfilled
+FileNameExtensions=rb; ruby; rbw; rake; rjs; rakefile; gemspec; podspec; \^Rakefile$; \^Podfile$
 [Rust Source Code]
+Default=fore:#DEDEDE; back:#141414
+Identifier=
 Keyword=bold; fore:#248112
 Build-In Type=fore:#A9003D
 Other Keyword=italic; fore:#248112
@@ -523,16 +661,23 @@ Macro Definition=fore:#0A246A
 Rust Lifetime=fore:#B000B0
 Parsing Error=fore:#F0F0F0; back:#F00000
 Byte String=fore:#C0C0C0
+FileNameExtensions=rs; rust
 [Shell Script]
+Default=fore:#DEDEDE; back:#141414
+Error=
 Comment=fore:#008000
 Number=fore:#008080
 Keyword=fore:#0000FF
 String Double Quoted=fore:#008080
 String Single Quoted=fore:#800080
+Operator=
+Identifier=
 Scalar=fore:#808000
 Parameter Expansion=fore:#808000; back:#FFFF99
 Back Ticks=fore:#FF0080
+Here-Doc (Delimiter)=
 Here-Doc (Single Quoted, q)=fore:#008080
+FileNameExtensions=sh; csh; zsh; bash; tcsh; m4; in; \^mozconfig$
 [SQL Query]
 Default=fore:#E0E2E4; back:#282C34
 Comment=italic; fore:#7F848E
@@ -543,15 +688,20 @@ Identifier=fore:#D19A66
 Quoted Identifier=fore:#98C379
 Number=fore:#D19A66
 Operator=fore:#ABB2BF
+FileNameExtensions=sql; mysql; hsql; pkb
 [Tcl Script]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#008000
 Keyword=fore:#0000FF
 Number=fore:#008080
 String=fore:#008080
+Operator=
 Identifier=fore:#800080
 Substitution=fore:#CC0000
 Modifier=fore:#FF00FF
+FileNameExtensions=tcl; itcl; tm
 [TOML Config]
+Default=fore:#DEDEDE; back:#141414
 Keyword=bold; fore:#FF0080
 Comment=fore:#008000
 Section=bold; fore:#000000; back:#FFF1A8; eolfilled
@@ -562,20 +712,32 @@ Number=fore:#0000E0
 Date-Time=fore:#950095
 String=italic; fore:#606060
 Parsing Error=fore:#FFFF00; back:#A00000; eolfilled
+FileNameExtensions=toml
 [VBScript]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#0D8206
 Keyword=fore:#3A6EA5
+Identifier=
 String=fore:#FCA287
 Number=fore:#ACFBC0
+Operator=
+FileNameExtensions=vbs; dsm
 [VHDL]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#008800
 Number=fore:#FF0000
 String=fore:#008000
 Operator=fore:#B000B0
+Identifier=
 Keyword=bold; fore:#0A246A
 Standard Operator=bold; fore:#0A246A
+Attribute=
+Standard Function=
+Standard Package=
 Standard Type=fore:#FF8000
+FileNameExtensions=vhdl; vhd
 [Visual Basic]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#0D8206
 Keyword=fore:#3A6EA5
 Identifier=fore:#FFFFFF
@@ -583,6 +745,7 @@ String=fore:#FCA287
 Number=fore:#92FB53
 Operator=fore:#FFFFFF
 Preprocessor=fore:#52A5F8
+FileNameExtensions=vb; bas; frm; cls; ctl; pag; dsr; dob
 [Web Source Code]
 Default=fore:#FFFFFF
 HTML Tag=fore:#E06C75
@@ -593,12 +756,14 @@ HTML Value=fore:#98C379
 HTML String=fore:#98C379
 HTML Other Inside Tag=fore:#ABB2BF
 HTML Comment=fore:#7F848E
+HTML Entity=fore:#F651F6
 HTML Element Text=fore:#E0E2E4
 XML Identifier=bold; fore:#881280
 SGML=fore:#E06C75
 CDATA=fore:#7F848E
 ASP Start Tag=fore:#0080C0
 PHP Start Tag=fore:#E06C75
+PHP Default=
 PHP Comment=italic; fore:#7F848E
 PHP Keyword=fore:#C678DD
 PHP String=fore:#98C379
@@ -611,24 +776,32 @@ PHP Complex Variable=fore:#E06C75
 JS Default=fore:#E06C75
 JS Comment=italic; fore:#7F848E
 JS Keyword=bold; fore:#C678DD
+JS Identifier=
 JS String=fore:#98C379
 JS Regex=fore:#FFFFFF
 JS Number=fore:#D19A66
 JS Symbols=fore:#ABB2BF
+ASP JS Default=
 ASP JS Comment=fore:#75715E
 ASP JS Keyword=fore:#F92672
+ASP JS Identifier=
 ASP JS String=fore:#E6DB74
 ASP JS Regex=fore:#E6DB74
 ASP JS Number=fore:#AE81FF
 ASP JS Symbols=fore:#F92672
+VBS Default=
 VBS Comment=fore:#75715E
 VBS Keyword=fore:#F92672
+VBS Identifier=
 VBS String=fore:#E6DB74
 VBS Number=fore:#AE81FF
+ASP VBS Default=
 ASP VBS Comment=fore:#75715E
 ASP VBS Keyword=fore:#F92672
+ASP VBS Identifier=
 ASP VBS String=fore:#E6DB74
 ASP VBS Number=fore:#AE81FF
+FileNameExtensions=html; htm; asp; aspx; shtml; htd; xhtml; php; php3; phtml; htt; cfm; tpl; dtd; hta; htc; jsp; mht; jd
 [XML Document]
 Default=fore:#E0E2E4; back:#282C34
 XML Tag=fore:#E06C75
@@ -638,10 +811,13 @@ XML String=fore:#98C379
 XML Other Inside Tag=fore:#E06C75
 XML Comment=italic; fore:#7F848E
 XML Entity=fore:#0080C0
+XML Element Text=
 XML Identifier=fore:#E06C75
 SGML=fore:#F92672
 CDATA=fore:#75715E
+FileNameExtensions=xml; xsl; rss; svg; xul; xsd; xslt; axl; rdf; xaml; vcproj; ffs_gui; nzb; resx; plist; xrc; fbp; manifest
 [YAML]
+Default=fore:#DEDEDE; back:#141414
 Comment=fore:#008800
 Identifier=bold; fore:#0A246A
 Keyword=fore:#880088
@@ -651,3 +827,4 @@ Document=bold; fore:#FFFFFF; back:#000088; eolfilled
 Text=fore:#404040
 Error=bold; italic; fore:#FFFFFF; back:#FF0000; eolfilled
 Operator=fore:#333366
+FileNameExtensions=yaml; yml
