--- a/OneDarkPro.ini
+++ b/OneDarkPro.ini
@@ -714,13 +714,13 @@ String=italic; fore:#606060
 Parsing Error=fore:#FFFF00; back:#A00000; eolfilled
 FileNameExtensions=toml
 [VBScript]
-Default=fore:#DEDEDE; back:#141414
-Comment=fore:#0D8206
-Keyword=fore:#3A6EA5
-Identifier=
-String=fore:#FCA287
-Number=fore:#ACFBC0
-Operator=
+Default=fore:#E0E2E4; back:#282C34
+Comment=italic; fore:#7F848E
+Keyword=fore:#C678DD
+Identifier=fore:#E06C75
+String=fore:#98C379
+Number=fore:#D19A66
+Operator=fore:#ABB2BF
 FileNameExtensions=vbs; dsm
 [VHDL]
 Default=fore:#DEDEDE; back:#141414
