--- a/OneDarkPro.ini
+++ b/OneDarkPro.ini
@@ -156,7 +156,7 @@ FileNameExtensions=awk
 [Batch Files]
 Default=fore:#E0E2E4; back:#282C34
 Comment=italic; fore:#7F848E
-Keyword=bold; fore:#C678DD
+Keyword=fore:#C678DD
 Identifier=fore:#98C379
 Operator=fore:#ABB2BF
 Command=bold; fore:#C678DD
@@ -589,18 +589,18 @@ Function Name=fore:#A6E22E
 Class Name=fore:#A6E22E
 FileNameExtensions=py; pyw; pyx; pxd; pxi; boo; empy; cobra; gs
 [Registry Files]
-Default=fore:#E0E2E4; back:#282C34
-Comment=italic; fore:#7F848E
+Default=fore:#DEDEDE; back:#141414
+Comment=fore:#008800
 Value Name=
-String=fore:#98C379
-Value Type=fore:#D19A66
-Hex=fore:#D19A66
-Added Key=fore:#61AFEF
-Deleted Key=fore:#61AFEF
-Escaped=
+String=fore:#008000
+Value Type=bold; fore:#00007F
+Hex=fore:#7F0B0C
+Added Key=bold; fore:#000000; back:#FF8040; eolfilled
+Deleted Key=fore:#FF0000
+Escaped=bold; fore:#7D8187
 GUID in Key Path=fore:#7B5F15
-Parameter=fore:#98C379
-Operator=fore:#56B6C2
+Parameter=fore:#0B6561
+Operator=bold
 FileNameExtensions=reg
 [Resource Script]
 Default=fore:#DEDEDE; back:#141414
@@ -714,13 +714,13 @@ String=italic; fore:#606060
 Parsing Error=fore:#FFFF00; back:#A00000; eolfilled
 FileNameExtensions=toml
 [VBScript]
-Default=fore:#E0E2E4; back:#282C34
-Comment=italic; fore:#7F848E
-Keyword=fore:#C678DD
-Identifier=fore:#E06C75
-String=fore:#98C379
-Number=fore:#D19A66
-Operator=fore:#ABB2BF
+Default=fore:#DEDEDE; back:#141414
+Comment=fore:#0D8206
+Keyword=fore:#3A6EA5
+Identifier=
+String=fore:#FCA287
+Number=fore:#ACFBC0
+Operator=
 FileNameExtensions=vbs; dsm
 [VHDL]
 Default=fore:#DEDEDE; back:#141414
