--- a/OneDarkPro.ini
+++ b/OneDarkPro.ini
@@ -1,4 +1,4 @@
-﻿# Notepad3 theme
+# Notepad3 theme
 # Name: One Dark Pro
 # Created by: DanRotaru
 # Homepage: https://github.com/DanRotaru/Notepad3_OneDarkPro
@@ -139,21 +139,20 @@ Comment Doc Word=bold; fore:#808080
 Comment Doc Error=italic; fore:#800000
 Task Marker=bold; fore:#208080
 [C/C++ Source Code]
-Identifier=fore:#E06C75
-Comment=italic; fore:#7F848E
-Keyword=fore:#C678DD
-Keyword 2nd=bold; fore:#C678DD
-Typedefs/Classes=bold; fore:#E06C75
-String=fore:#98C379
-Number=fore:#D19A66
-Operator=fore:#ABB2BF
-Preprocessor=fore:#C678DD
+Identifier=fore:#B5B5B9
+Comment=fore:#0D8206
+Keyword=fore:#3A6EA5
+Keyword 2nd=bold; italic; fore:#3C6CDD
+Typedefs/Classes=bold; italic; fore:#800000
+String=fore:#FCA287
+Number=fore:#ACFBC0
+Operator=fore:#808080
+Preprocessor=fore:#808080
 Verbatim=fore:#B000B0
-Comment Doc=italic; fore:#7F848E
-Comment Doc Word=italic; fore:#7F848E
-Comment Doc Error=italic; fore:#7F848E
+Comment Doc=fore:#808080
+Comment Doc Word=bold; fore:#808080
+Comment Doc Error=italic; fore:#800000
 Task Marker=bold; fore:#208080
-Default=fore:#E0E2E4; back:#282C34
 [Cmake Script]
 Comment=fore:#008000
 String=fore:#7F007F; back:#EEEEEE
@@ -648,12 +647,13 @@ XML Identifier=fore:#E06C75
 SGML=fore:#F92672
 CDATA=fore:#75715E
 [YAML]
-Comment=fore:#008800
-Identifier=bold; fore:#0A246A
-Keyword=fore:#880088
-Number=fore:#FF8000
+Comment=italic; fore:#7F848E
+Identifier=fore:#E06C75
+Keyword=fore:#C678DD
+Number=fore:#D19A66
 Reference=fore:#008888
 Document=bold; fore:#FFFFFF; back:#000088; eolfilled
-Text=fore:#404040
-Error=bold; italic; fore:#FFFFFF; back:#FF0000; eolfilled
-Operator=fore:#333366
+Text=fore:#98C379
+Error=fore:#C22935
+Operator=fore:#ABB2BF
+Default=fore:#E0E2E4; back:#282C34
