--- a/OneDarkPro.ini
+++ b/OneDarkPro.ini
@@ -139,20 +139,21 @@ Comment Doc Word=bold; fore:#808080
 Comment Doc Error=italic; fore:#800000
 Task Marker=bold; fore:#208080
 [C/C++ Source Code]
-Identifier=fore:#B5B5B9
-Comment=fore:#0D8206
-Keyword=fore:#3A6EA5
-Keyword 2nd=bold; italic; fore:#3C6CDD
-Typedefs/Classes=bold; italic; fore:#800000
-String=fore:#FCA287
-Number=fore:#ACFBC0
-Operator=fore:#808080
-Preprocessor=fore:#808080
+Identifier=fore:#E06C75
+Comment=italic; fore:#7F848E
+Keyword=fore:#C678DD
+Keyword 2nd=bold; fore:#C678DD
+Typedefs/Classes=bold; fore:#E06C75
+String=fore:#98C379
+Number=fore:#D19A66
+Operator=fore:#ABB2BF
+Preprocessor=fore:#C678DD
 Verbatim=fore:#B000B0
 Comment Doc=fore:#808080
 Comment Doc Word=bold; fore:#808080
 Comment Doc Error=italic; fore:#800000
 Task Marker=bold; fore:#208080
+Default=fore:#E0E2E4; back:#282C34
 [Cmake Script]
 Comment=fore:#008000
 String=fore:#7F007F; back:#EEEEEE
