--- a/OneDarkPro.ini
+++ b/OneDarkPro.ini
@@ -1,4 +1,4 @@
-# Notepad3 theme
+﻿# Notepad3 theme
 # Name: One Dark Pro
 # Created by: DanRotaru
 # Homepage: https://github.com/DanRotaru/Notepad3_OneDarkPro
@@ -74,9 +74,9 @@ Number=fore:#D19A66
 Directive=fore:#E06C75
 IP Address=fore:#D19A66
 [Assembly Script]
-Comment=fore:#75715E
-String=fore:#E6DB74
-Number=fore:#AE81FF
+Comment=italic; fore:#7F848E
+String=fore:#98C379
+Number=fore:#D19A66
 Operator=fore:#F92672
 CPU Instruction=fore:#0A246A
 FPU Instruction=fore:#0A246A
@@ -86,33 +86,33 @@ Directive Operand=fore:#0A246A
 Register=fore:#75715E
 [AutoHotkey Script]
 [AutoIt3 Script]
-Comment=fore:#008000
-Number=fore:#008080
+Comment=italic; fore:#7F848E
+Number=fore:#D19A66
 Function=fore:#0000FF
 User-Defined Function=fore:#0000FF
-Keyword=fore:#0000FF
+Keyword=fore:#C678DD
 Macro=fore:#0080FF
-String=fore:#008080
+String=fore:#98C379
 Operator=fore:#C000C0
 Variable=fore:#808000
 Send Key=fore:#FF0000
 Preprocessor=fore:#FF8000
 Special=fore:#FF8000
 [AviSynth Script]
-Comment=fore:#008000
-String=fore:#7F007F
-Number=fore:#007F7F
-Keyword=bold; fore:#00007F
+Comment=italic; fore:#7F848E
+String=fore:#98C379
+Number=fore:#D19A66
+Keyword=fore:#C678DD
 Filter=bold; fore:#00007F
 Plugin=bold; fore:#0080C0
 Function=fore:#007F7F
 Clip Property=fore:#00007F
 [Awk Script]
-Keyword=bold; fore:#0000A0
+Keyword=fore:#C678DD
 Keyword 2nd=bold; italic; fore:#6666FF
-Comment=fore:#808080
-String=fore:#008000
-Number=fore:#C04000
+Comment=italic; fore:#7F848E
+String=fore:#98C379
+Number=fore:#D19A66
 Operator=fore:#B000B0
 [Batch Files]
 Default=fore:#E0E2E4; back:#282C34
@@ -124,16 +124,16 @@ Command=fore:#C678DD
 Label=fore:#E0E2E4
 [C# Source Code]
 Default=fore:#E0E2E4; back:#282C34
-Identifier=fore:#FFFFFF
-Comment=fore:#0D8206
-Keyword=fore:#52A5F8
+Identifier=fore:#E06C75
+Comment=italic; fore:#7F848E
+Keyword=fore:#C678DD
 Keyword 2nd=bold; italic; fore:#804000
-Global Class=fore:#2B91AF
-String=fore:#FCA287
-Number=fore:#80FF80
+Global Class=fore:#E37B83
+String=fore:#98C379
+Number=fore:#D19A66
 Operator=fore:#FFFFFF
 Preprocessor=fore:#808080
-Verbatim String=fore:#FCA287
+Verbatim String=fore:#98C379
 Comment Doc=fore:#808080
 Comment Doc Word=bold; fore:#808080
 Comment Doc Error=italic; fore:#800000
@@ -155,8 +155,8 @@ Comment Doc Error=italic; fore:#800000
 Task Marker=bold; fore:#208080
 Default=fore:#E0E2E4; back:#282C34
 [Cmake Script]
-Comment=fore:#008000
-String=fore:#7F007F; back:#EEEEEE
+Comment=italic; fore:#7F848E
+String=fore:#98C379
 Function=fore:#00007F
 Parameter=fore:#7F200F
 Variable=fore:#CC3300
@@ -164,15 +164,15 @@ While Def=fore:#00007F
 For Each Def=fore:#00007F
 If Def=fore:#00007F
 Macro Def=fore:#00007F
-Variable within String=fore:#CC3300; back:#EEEEEE
-Number=fore:#008080
+Variable within String=fore:#98C379; back:#EEEEEE
+Number=fore:#D19A66
 [Coffeescript]
-Comment=fore:#646464
-String=fore:#008000
+Comment=italic; fore:#7F848E
+String=fore:#98C379
 Preprocessor=fore:#FF8000
-Identifier=bold; fore:#0A246A
+Identifier=fore:#E06C75
 Operator=fore:#B000B0
-Number=fore:#FF0000
+Number=fore:#D19A66
 Regex=fore:#006633; back:#FFF1A8
 [Configuration Files]
 Default=fore:#E0E2E4; back:#282C34
@@ -199,8 +199,8 @@ Important=bold; fore:#C678DD
 Directive=fore:#C678DD
 Media=fore:#C678DD
 Variable=fore:#E06C75
-Unknown Pseudo-Class=fore:#FF0000
-Unknown Property=fore:#FF0000
+Unknown Pseudo-Class=fore:#56B6C2
+Unknown Property=fore:#ABB2BF
 [CSV Prism]
 Column 0=fore:#9400D3
 Column 1=fore:#1C01AF
@@ -213,35 +213,35 @@ Column 7=fore:#D3E401
 Column 8=fore:#FE9901
 Column 9=fore:#D90000
 [D Source Code]
-Comment=fore:#008000
+Comment=italic; fore:#7F848E
 Comment Doc=fore:#0040A0
-Number=fore:#FF0000
-Keyword=bold; fore:#0A246A
+Number=fore:#D19A66
+Keyword=fore:#C678DD
 Keyword 2nd=bold; fore:#0A246A
 Typedef=italic; fore:#0A246A
-String=italic; fore:#3C6CDD
+String=fore:#98C379
 Operator=fore:#B000B0
 [Dart Source Code]
-Keyword=fore:#0000FF
+Keyword=fore:#C678DD
 Keyword 2nd=fore:#0000FF
 Meta-Data=fore:#FF8000
 Class=fore:#0080FF
 Enumeration=fore:#FF8000
 Function=fore:#A46000
-Comment=fore:#608060
+Comment=italic; fore:#7F848E
 Comment Doc=fore:#408040
 Task Marker=bold; fore:#408080
-String=fore:#008000
+String=fore:#98C379
 TriQ-String=fore:#F08000
 Verbatim String=fore:#F08000
 ESC Sequence=fore:#0080C0
 Label=fore:#7C5AF3
-Number=fore:#FF0000
+Number=fore:#D19A66
 Variable=fore:#9E4D2A
 Operator=fore:#7C5AF3
 Operator2=fore:#B000B0
 [Diff Files]
-Comment=fore:#75715E
+Comment=italic; fore:#7F848E
 Command=bold; fore:#0A246A
 Source and Destination=bold; italic; fore:#4C4745
 Position Setting=fore:#0000FF
@@ -249,33 +249,34 @@ Line Addition=back:#13354A; eolfilled
 Line Removal=fore:#960050; back:#1E0010; eolfilled
 Line Change=fore:#89807D; back:#4C4745; eolfilled
 [Go Source Code]
-Comment=fore:#008000
-Number=fore:#FF0000
-Keyword=bold; fore:#0A246A
+Comment=italic; fore:#7F848E
+Number=fore:#D19A66
+Keyword=fore:#C678DD
 Keyword 2nd=bold; fore:#0A246A
 Typedef=italic; fore:#0A246A
-String=italic; fore:#3C6CDD
+String=fore:#98C379
 Operator=fore:#B000B0
 [Inno Setup Script]
-Comment=fore:#008000
-Keyword=fore:#0000FF
+Comment=italic; fore:#7F848E
+Keyword=fore:#C678DD
 Parameter=fore:#0000FF
 Section=bold; fore:#000080
 Preprocessor=fore:#CC0000
 Inline Expansion=fore:#800080
-Pascal Comment=fore:#008000
-Pascal Keyword=fore:#0000FF
+Pascal Comment=italic; fore:#7F848E
+Pascal Keyword=fore:#C678DD
 [Java Source Code]
-Comment=fore:#008000
-Keyword=fore:#F92672
-Keyword 2nd=bold; fore:#A46000
-String=fore:#E6DB74
-Number=fore:#AE81FF
-Operator=fore:#F92672
-Comment Doc=fore:#808080
+Comment=italic; fore:#7F848E
+Keyword=fore:#C678DD
+Keyword 2nd=bold; fore:#C678DD
+String=fore:#98C379
+Number=fore:#D19A66
+Operator=fore:#ABB2BF
 Comment Doc Word=bold; fore:#808080
 Comment Doc Error=italic; fore:#800000
 Task Marker=bold; fore:#208080
+Default=fore:#E0E2E4; back:#282C34
+Identifier=fore:#E06C75
 [JavaScript]
 Default=fore:#E0E2E4; back:#282C34
 Identifier=fore:#E06C75
@@ -297,74 +298,74 @@ String=fore:#98C379
 Number=fore:#D19A66
 Operator=fore:#ABB2BF
 Property Name=fore:#E06C75
-ESC Sequence=fore:#0B982E
+ESC Sequence=fore:#98C379
 Parsing Error=fore:#FFFF00; back:#A00000; eolfilled
 [Julia Script]
-Comment=fore:#608060
-Number=fore:#FF0000
-Keyword=bold; fore:#0000FF
+Comment=italic; fore:#7F848E
+Number=fore:#D19A66
+Keyword=fore:#C678DD
 Keyword 2nd=bold; fore:#8A008A
-String=fore:#BB2F00
+String=fore:#98C379
 Operator=fore:#B53A00
 Type Operator=fore:#950095
-Identifier=fore:#00007B
+Identifier=fore:#E06C75
 Symbol=fore:#C0A030
 Macro Def=fore:#0080FF
 Comment Doc=fore:#808080
-Literal String=fore:#B000B0
+Literal String=fore:#98C379
 Command=bold; fore:#0000DD
 Annotation=fore:#FF8000
 Parsing Error=fore:#FFFF00; back:#A00000; eolfilled
 [KiXtart Script]
-Keyword=bold; fore:#265CFF
+Keyword=fore:#C678DD
 Function=fore:#9B009B
 Macro=fore:#FFC000
-Comment=fore:#008000
-String=italic; fore:#8F8F8F
+Comment=italic; fore:#7F848E
+String=fore:#98C379
 Operator=fore:#C80000
-Number=fore:#009797
+Number=fore:#D19A66
 Variable=fore:#9E4D2A
 [Kotlin Source Code]
-Keyword=fore:#0000FF
+Keyword=fore:#C678DD
 Annotation=fore:#FF8000
 Class=fore:#0080FF
 Interface=bold; fore:#1E90FF
 Enumeration=fore:#FF8000
 Function=fore:#A46000
-Comment=fore:#608060
+Comment=italic; fore:#7F848E
 Comment Doc=fore:#408080
 Comment Doc Word=fore:#408080
 Task Marker=bold; fore:#208080
-String=fore:#008000
-Verbatim String=fore:#F08000
+String=fore:#98C379
+Verbatim String=fore:#98C379
 ESC Sequence=fore:#0080C0
 Back Ticks=fore:#9E4D2A
 Label=fore:#7C5AF3
-Number=fore:#FF0000
+Number=fore:#D19A66
 Variable=fore:#9E4D2A
 Operator=fore:#B000B0
 [LaTeX Files]
 Command=fore:#0000FF
-Comment=fore:#008000
+Comment=italic; fore:#7F848E
 Math=fore:#FF0000
 Special Char=fore:#AAAA00
 Tag=fore:#0000FF
 Verbatim Segment=fore:#666666
 Error=fore:#FFFF00; back:#A00000
 [Lua Script]
-Comment=fore:#008000
-Number=fore:#008080
-Keyword=fore:#00007F
+Comment=italic; fore:#7F848E
+Number=fore:#D19A66
+Keyword=fore:#C678DD
 Basic Functions=fore:#00007F
 String, Table & Math Functions=fore:#00007F
 Input, Output & System Facilities=fore:#00007F
-String=fore:#B000B0
-Literal String=fore:#B000B0
+String=fore:#98C379
+Literal String=fore:#98C379
 Preprocessor=fore:#FF8000
 Label=fore:#808000
 [Makefiles]
-Comment=fore:#75715E
-Identifier=fore:#003CE6
+Comment=italic; fore:#7F848E
+Identifier=fore:#E06C75
 Preprocessor=fore:#75715E
 [Markdown]
 Default=fore:#E0E2E4; back:#282C34
@@ -381,28 +382,28 @@ Block Quote=fore:#1B2765
 Link=fore:#61AFEF
 Code=fore:#00007F; back:#EBEBEB
 [MATLAB]
-Comment=fore:#008000
-Number=fore:#FF8000
-Keyword=bold; fore:#00007F
-String=fore:#7F007F
+Comment=italic; fore:#7F848E
+Number=fore:#D19A66
+Keyword=fore:#C678DD
+String=fore:#98C379
 [Nim Source Code]
-Comment=italic; fore:#484A86
-Keyword=bold; fore:#5E8F60
+Comment=italic; fore:#7F848E
+Keyword=fore:#C678DD
 String Double Quoted=fore:#A4255B
 String Single Quoted=fore:#A4255B
 String Triple Double Quotes=fore:#A4255B
 String Triple Single Quotes=fore:#A4255B
-Number=fore:#252DBE
+Number=fore:#D19A66
 Operator=bold; fore:#4B4B4B
 Function name=fore:#4B4B4B
 Parsing Error=italic; fore:#FFFF00; back:#A00000
 [NSIS Script]
-Comment=fore:#008000
-String=fore:#666666; back:#EEEEEE
+Comment=italic; fore:#7F848E
+String=fore:#98C379
 Function=fore:#0033CC
 Variable=fore:#CC3300
-Variable within String=fore:#CC3300; back:#EEEEEE
-Number=fore:#FF0000
+Variable within String=fore:#98C379
+Number=fore:#D19A66
 Constant=fore:#FF9900
 Section=fore:#0033CC
 Sub Section=fore:#0033CC
@@ -412,18 +413,18 @@ PageEx=fore:#0033CC
 If Definition=fore:#0033CC
 Macro Definition=fore:#0033CC
 [Pascal Source Code]
-Comment=fore:#75715E
-Keyword=fore:#F92672
-String=fore:#E6DB74
-Number=fore:#AE81FF
+Comment=italic; fore:#7F848E
+Keyword=fore:#C678DD
+String=fore:#98C379
+Number=fore:#D19A66
 Inline Asm=fore:#0000FF
 Preprocessor=fore:#75715E
 [Perl Script]
-Comment=fore:#75715E
-Keyword=fore:#F92672
+Comment=italic; fore:#7F848E
+Keyword=fore:#C678DD
 String Double Quoted=fore:#E6DB74
 String Single Quoted=fore:#E6DB74
-Number=fore:#AE81FF
+Number=fore:#D19A66
 Scalar $var=fore:#0A246A
 Array @var=fore:#003CE6
 Hash %var=fore:#B000B0
@@ -448,25 +449,27 @@ POD (Verbatim)=fore:#A46000; back:#FFFFC0; eolfilled
 Data Section=fore:#A46000; back:#FFFFC0; eolfilled
 Parsing Error=fore:#F8F8F0; back:#F92672
 [PowerShell Script]
-Comment=fore:#75715E
-Keyword=fore:#F92672
-String=fore:#E6DB74
-Number=fore:#AE81FF
+Comment=italic; fore:#7F848E
+Keyword=fore:#C678DD
+String=fore:#98C379
+Number=fore:#D19A66
 Variable=fore:#0A246A
 Cmdlet=fore:#804000; back:#FFF1A8
 Alias=bold; fore:#0A246A
 [Python Script]
-Comment=fore:#75715E
-Keyword=fore:#F92672
-String Single Quoted=fore:#E6DB74
-String Double Quoted=fore:#E6DB74
+Comment=italic; fore:#7F848E
+Keyword=fore:#C678DD
+String Single Quoted=fore:#98C379
+String Double Quoted=fore:#98C379
 String Triple Single Quotes=fore:#E6DB74
 String Triple Double Quotes=fore:#E6DB74
 Decorator=fore:#F2B600
-Number=fore:#AE81FF
-Operator=fore:#F92672
-Function Name=fore:#A6E22E
-Class Name=fore:#A6E22E
+Number=fore:#D19A66
+Operator=fore:#ABB2BF
+Function Name=fore:#E06C75
+Class Name=fore:#E06C75
+Default=fore:#E0E2E4; back:#282C34
+Identifier=fore:#E06C75
 [Registry Files]
 Default=fore:#E0E2E4; back:#282C34
 Comment=italic; fore:#7F848E
@@ -480,10 +483,10 @@ GUID in Key Path=fore:#7B5F15
 Parameter=fore:#98C379
 Operator=fore:#ABB2BF
 [Resource Script]
-Comment=fore:#75715E
-Keyword=fore:#F92672
-String=fore:#E6DB74
-Number=fore:#80FF80
+Comment=italic; fore:#7F848E
+Keyword=fore:#C678DD
+String=fore:#98C379
+Number=fore:#D19A66
 Operator=fore:#F92672
 Preprocessor=fore:#75715E
 Comment Doc=fore:#808080
@@ -491,20 +494,20 @@ Comment Doc Word=bold; fore:#808080
 Comment Doc Error=italic; fore:#800000
 Task Marker=bold; fore:#208080
 [R-S-SPlus Statistics Code]
-Comment=fore:#008000
-Keyword=bold; fore:#0A246A
+Comment=italic; fore:#7F848E
+Keyword=fore:#C678DD
 Base Package Functions=bold; fore:#7F0000
 Other Package Functions=bold; fore:#7F007F
-Number=fore:#0000FF
-String=italic; fore:#3C6CDD
+Number=fore:#D19A66
+String=fore:#98C379
 Operator=bold; fore:#B000B0
 Infix=fore:#660066
 Infix EOL=fore:#FF4000; back:#E0C0E0; eolfilled
 [Ruby Script]
-Comment=fore:#008000
-Keyword=fore:#00007F
-Number=fore:#008080
-String=fore:#FF8000
+Comment=italic; fore:#7F848E
+Keyword=fore:#C678DD
+Number=fore:#D19A66
+String=fore:#98C379
 Class Name=fore:#0000FF
 Function Name=fore:#007F7F
 POD=fore:#004000; back:#C0FFC0; eolfilled
@@ -514,22 +517,25 @@ Module Name=fore:#A000A0
 Instance Var=fore:#B00080
 Class Var=fore:#8000B0
 Data Section=fore:#600000; back:#FFF0D8; eolfilled
+Default=fore:#E0E2E4; back:#282C34
+Identifier=fore:#E06C75
+Operator=fore:#ABB2BF
 [Rust Source Code]
-Keyword=bold; fore:#248112
+Keyword=fore:#C678DD
 Build-In Type=fore:#A9003D
-Other Keyword=italic; fore:#248112
-Number=fore:#666666
-Comment=italic; fore:#488080
-String=fore:#B31C1B
+Other Keyword=fore:#C678DD
+Number=fore:#D19A66
+Comment=italic; fore:#7F848E
+String=fore:#98C379
 Operator=fore:#666666
 Macro Definition=fore:#0A246A
 Rust Lifetime=fore:#B000B0
 Parsing Error=fore:#F0F0F0; back:#F00000
-Byte String=fore:#C0C0C0
+Byte String=fore:#98C379
 [Shell Script]
-Comment=fore:#008000
-Number=fore:#008080
-Keyword=fore:#0000FF
+Comment=italic; fore:#7F848E
+Number=fore:#D19A66
+Keyword=fore:#C678DD
 String Double Quoted=fore:#008080
 String Single Quoted=fore:#800080
 Scalar=fore:#808000
@@ -542,28 +548,28 @@ Comment=italic; fore:#7F848E
 Keyword=fore:#C678DD
 Value Type=fore:#C678DD
 String=fore:#98C379
-Identifier=fore:#D19A66
-Quoted Identifier=fore:#98C379
+Identifier=fore:#E06C75
+Quoted Identifier=fore:#E06C75
 Number=fore:#D19A66
 Operator=fore:#ABB2BF
 [Tcl Script]
-Comment=fore:#008000
-Keyword=fore:#0000FF
-Number=fore:#008080
-String=fore:#008080
-Identifier=fore:#800080
+Comment=italic; fore:#7F848E
+Keyword=fore:#C678DD
+Number=fore:#D19A66
+String=fore:#98C379
+Identifier=fore:#E06C75
 Substitution=fore:#CC0000
 Modifier=fore:#FF00FF
 [TOML Config]
-Keyword=bold; fore:#FF0080
-Comment=fore:#008000
+Keyword=fore:#C678DD
+Comment=italic; fore:#7F848E
 Section=bold; fore:#000000; back:#FFF1A8; eolfilled
 Key=bold; fore:#5E608F
 Assignment=bold; fore:#FF2020
 Value=fore:#202020
-Number=fore:#0000E0
+Number=fore:#D19A66
 Date-Time=fore:#950095
-String=italic; fore:#606060
+String=fore:#98C379
 Parsing Error=fore:#FFFF00; back:#A00000; eolfilled
 [VBScript]
 Default=fore:#E0E2E4; back:#282C34
@@ -574,19 +580,19 @@ String=fore:#98C379
 Number=fore:#D19A66
 Operator=fore:#ABB2BF
 [VHDL]
-Comment=fore:#008800
-Number=fore:#FF0000
-String=fore:#008000
+Comment=italic; fore:#7F848E
+Number=fore:#D19A66
+String=fore:#98C379
 Operator=fore:#B000B0
-Keyword=bold; fore:#0A246A
+Keyword=fore:#C678DD
 Standard Operator=bold; fore:#0A246A
 Standard Type=fore:#FF8000
 [Visual Basic]
-Comment=fore:#0D8206
-Keyword=fore:#3A6EA5
-Identifier=fore:#FFFFFF
-String=fore:#FCA287
-Number=fore:#92FB53
+Comment=italic; fore:#7F848E
+Keyword=fore:#C678DD
+Identifier=fore:#E06C75
+String=fore:#98C379
+Number=fore:#D19A66
 Operator=fore:#FFFFFF
 Preprocessor=fore:#52A5F8
 [Web Source Code]
@@ -616,25 +622,25 @@ PHP String Variable=fore:#E06C75
 PHP Complex Variable=fore:#E06C75
 JS Default=fore:#E06C75
 JS Comment=italic; fore:#7F848E
-JS Keyword=bold; fore:#C678DD
+JS Keyword=fore:#C678DD
 JS String=fore:#98C379
 JS Regex=fore:#FFFFFF
 JS Number=fore:#D19A66
 JS Symbols=fore:#ABB2BF
-ASP JS Comment=fore:#75715E
-ASP JS Keyword=fore:#F92672
-ASP JS String=fore:#E6DB74
+ASP JS Comment=italic; fore:#7F848E
+ASP JS Keyword=fore:#C678DD
+ASP JS String=fore:#98C379
 ASP JS Regex=fore:#E6DB74
-ASP JS Number=fore:#AE81FF
+ASP JS Number=fore:#D19A66
 ASP JS Symbols=fore:#F92672
-VBS Comment=fore:#75715E
-VBS Keyword=fore:#F92672
-VBS String=fore:#E6DB74
-VBS Number=fore:#AE81FF
-ASP VBS Comment=fore:#75715E
-ASP VBS Keyword=fore:#F92672
-ASP VBS String=fore:#E6DB74
-ASP VBS Number=fore:#AE81FF
+VBS Comment=italic; fore:#7F848E
+VBS Keyword=fore:#C678DD
+VBS String=fore:#98C379
+VBS Number=fore:#D19A66
+ASP VBS Comment=italic; fore:#7F848E
+ASP VBS Keyword=fore:#C678DD
+ASP VBS String=fore:#98C379
+ASP VBS Number=fore:#D19A66
 [XML Document]
 Default=fore:#E0E2E4; back:#282C34
 XML Tag=fore:#E06C75
